@@ -3,29 +3,35 @@ package br.com.semesperanca.app.managing.pilates.studios.service;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.web.server.ResponseStatusException;
 
+import br.com.semesperanca.app.managing.pilates.studios.application.model.studentInputDTO.PlanStudentInputDTO;
 import br.com.semesperanca.app.managing.pilates.studios.application.model.studentInputDTO.StudentInputDTO;
 import br.com.semesperanca.app.managing.pilates.studios.application.model.studentInputDTO.UpComingClassInputDTO;
 import br.com.semesperanca.app.managing.pilates.studios.application.model.studentOutputDTO.StudentOutputDTO;
 import br.com.semesperanca.app.managing.pilates.studios.application.model.studentOutputDTO.UpComingClassOutputDTO;
 import br.com.semesperanca.app.managing.pilates.studios.application.model.studentOutputDTO.ClientAreaOutputDTO;
 import br.com.semesperanca.app.managing.pilates.studios.application.model.studentOutputDTO.AssessmentOutputDTO;
-import br.com.semesperanca.app.managing.pilates.studios.application.model.studentOutputDTO.PlanOutputDTO;
+import br.com.semesperanca.app.managing.pilates.studios.application.model.studentOutputDTO.PlanStudentOutputDTO;
 import br.com.semesperanca.app.managing.pilates.studios.model.student.Student;
 import br.com.semesperanca.app.managing.pilates.studios.model.student.UpComingClass;
 import br.com.semesperanca.app.managing.pilates.studios.model.student.ClientArea;
+import br.com.semesperanca.app.managing.pilates.studios.model.Plan;
 import br.com.semesperanca.app.managing.pilates.studios.model.student.Assessment;
-import br.com.semesperanca.app.managing.pilates.studios.model.student.Plan;
+import br.com.semesperanca.app.managing.pilates.studios.model.student.PlanStudent;
+import br.com.semesperanca.app.managing.pilates.studios.repository.PlanRepository;
 import br.com.semesperanca.app.managing.pilates.studios.repository.StudentRepository;
 import lombok.AllArgsConstructor;
 
 @AllArgsConstructor
 @Service
-
 public class StudentService {
 
         private final StudentRepository studentRepository;
+
+        private final PlanRepository planRepository;
 
         public List<StudentOutputDTO> getAllStudentsByRole(String role) {
                 return studentRepository.findByRole(role).stream()
@@ -37,7 +43,6 @@ public class StudentService {
                 return studentRepository.findById(id)
                                 .map(this::assemblerStudentOutputDTO)
                                 .orElse(null);
-
         }
 
         public StudentOutputDTO getStudentByCpf(String cpf) {
@@ -47,16 +52,35 @@ public class StudentService {
         }
 
         public List<StudentOutputDTO> listAllActiveStudent() {
-                List<Student> Students = studentRepository.findAll().stream()
+                List<Student> students = studentRepository.findAll().stream()
                                 .filter(i -> Boolean.TRUE.equals(i.getIsActive()))
                                 .toList();
-                return Students.stream().map(this::assemblerStudentOutputDTO).toList();
+                return students.stream().map(this::assemblerStudentOutputDTO).toList();
+        }
+
+        public List<StudentOutputDTO> findByIds(List<String> ids) {
+                List<Student> students = studentRepository.findByIdIn(ids);
+                return students.stream()
+                                .map(this::assemblerStudentOutputDTO)
+                                .collect(Collectors.toList());
         }
 
         public StudentOutputDTO createStudent(StudentInputDTO dto) {
                 Student student = assemblerStudentEntity(dto);
                 Student saved = studentRepository.save(student);
                 return assemblerStudentOutputDTO(saved);
+        }
+
+        public StudentOutputDTO addPlanToStudent(String studentId, PlanStudentInputDTO planDTO) {
+                return studentRepository.findById(studentId)
+                                .map(student -> {
+                                        PlanStudent plan = mergePlanData(planDTO);
+                                        student.setPlan(plan);
+                                        Student updated = studentRepository.save(student);
+                                        return assemblerStudentOutputDTO(updated);
+                                })
+                                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND,
+                                                "Student not found with ID: " + studentId));
         }
 
         public void desactivateStudent(String id) {
@@ -98,18 +122,6 @@ public class StudentService {
                                                                 dto.assessment().relevantData()));
                                         }
 
-                                        if (dto.plan() != null) {
-                                                existingStudent.setPlan(new Plan(
-                                                                dto.plan().modality(),
-                                                                dto.plan().frequency(),
-                                                                dto.plan().duration(),
-                                                                dto.plan().startDate(),
-                                                                dto.plan().paymentMethod(),
-                                                                dto.plan().discount(),
-                                                                dto.plan().paymentType(),
-                                                                dto.plan().firstPaymentDate(),
-                                                                dto.plan().dueDate()));
-                                        }
 
                                         if (dto.clientArea() != null) {
                                                 existingStudent.setClientArea(new ClientArea(
@@ -118,7 +130,7 @@ public class StudentService {
                                                                 dto.clientArea().paymentProof(),
                                                                 dto.clientArea().fiscalReceipt(),
                                                                 dto.clientArea().contract(),
-                                                                convertToEntityList(dto.clientArea().upComingClasses()), // aqui
+                                                                convertToEntityList(dto.clientArea().upComingClasses()),
                                                                 dto.clientArea().imageAuthorization()));
                                         }
 
@@ -128,6 +140,25 @@ public class StudentService {
                                 .orElse(null);
         }
 
+        public StudentOutputDTO cancelStudentPlan(String studentId) {
+                Student student = studentRepository.findById(studentId)
+                                .orElseThrow(() -> new RuntimeException("Student not found with ID: " + studentId));
+
+                if (student.getPlan() == null || Boolean.FALSE.equals(student.getPlan().getIsActive())) {
+                        throw new RuntimeException("Student does not have an active plan.");
+                }
+
+                if (!cancelPlan(student)) {
+                        throw new RuntimeException(
+                                        "The plan cannot be canceled at this time. Please check the cancellation rules.");
+                }
+
+                student.getPlan().setIsActive(false);
+                Student updated = studentRepository.save(student);
+
+                return assemblerStudentOutputDTO(updated);
+        }
+
         private Student assemblerStudentEntity(StudentInputDTO input) {
                 Assessment assessment = new Assessment(
                                 input.assessment().description(),
@@ -135,24 +166,13 @@ public class StudentService {
                                 input.assessment().posturalPhoto(),
                                 input.assessment().relevantData());
 
-                Plan plan = new Plan(
-                                input.plan().modality(),
-                                input.plan().frequency(),
-                                input.plan().duration(),
-                                input.plan().startDate(),
-                                input.plan().paymentMethod(),
-                                input.plan().discount(),
-                                input.plan().paymentType(),
-                                input.plan().firstPaymentDate(),
-                                input.plan().dueDate());
-
                 ClientArea clientArea = new ClientArea(
                                 input.clientArea().paymentDueDate(),
                                 input.clientArea().makeUps(),
                                 input.clientArea().paymentProof(),
                                 input.clientArea().fiscalReceipt(),
                                 input.clientArea().contract(),
-                                convertToEntityList(input.clientArea().upComingClasses()), // aqui também
+                                convertToEntityList(input.clientArea().upComingClasses()),
                                 input.clientArea().imageAuthorization());
 
                 return Student.builder()
@@ -165,7 +185,6 @@ public class StudentService {
                                 .photo(input.photo())
                                 .isActive(input.isActive())
                                 .assessment(assessment)
-                                .plan(plan)
                                 .clientArea(clientArea)
                                 .progress(input.progress())
                                 .build();
@@ -189,18 +208,18 @@ public class StudentService {
                                         student.getAssessment().getRelevantData());
                 }
 
-                PlanOutputDTO planDTO = null;
+                PlanStudentOutputDTO planDTO = null;
                 if (student.getPlan() != null) {
-                        planDTO = new PlanOutputDTO(
-                                        student.getPlan().getModality(),
-                                        student.getPlan().getFrequency(),
+                        planDTO = new PlanStudentOutputDTO(
+                                        student.getPlan().getIdPlan(),
                                         student.getPlan().getDuration(),
                                         student.getPlan().getStartDate(),
                                         student.getPlan().getPaymentMethod(),
                                         student.getPlan().getDiscount(),
                                         student.getPlan().getPaymentType(),
                                         student.getPlan().getFirstPaymentDate(),
-                                        student.getPlan().getDueDate());
+                                        student.getPlan().getDueDate(),
+                                        student.getPlan().getIsActive());
                 }
 
                 ClientAreaOutputDTO clientAreaDTO = new ClientAreaOutputDTO(
@@ -232,6 +251,31 @@ public class StudentService {
                 return dtoList.stream()
                                 .map(dto -> new UpComingClass(dto.date(), dto.time(), dto.status()))
                                 .collect(Collectors.toList());
+        }
+
+        private PlanStudent mergePlanData(PlanStudentInputDTO dto) {
+                Plan basePlan = planRepository.findById(dto.idPlan())
+                                .orElseThrow(() -> new RuntimeException(
+                                                "Plan not found with ID: " + dto.idPlan()));
+
+                PlanStudent mergedPlan = new PlanStudent();
+                mergedPlan.setIdPlan(basePlan.getId());
+
+                mergedPlan.setDuration(dto.duration());
+                mergedPlan.setStartDate(dto.startDate());
+                mergedPlan.setPaymentMethod(dto.paymentMethod());
+                mergedPlan.setPaymentType(dto.paymentType());
+                mergedPlan.setDiscount(dto.discount());
+                mergedPlan.setFirstPaymentDate(dto.firstPaymentDate());
+                mergedPlan.setDueDate(dto.dueDate());
+                mergedPlan.setIsActive(dto.isActive() != null ? dto.isActive() : true);
+
+                return mergedPlan;
+        }
+
+        private boolean cancelPlan(Student student) {
+                PlanStudent plan = student.getPlan();
+                return plan != null;
         }
 
 }
